--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,12 @@
     width: 350px;
     float: left;
 }
+.text-box{
+    border: 2px solid red;
+  padding: 6px;
+  margin: 20px;
+  background-color: yellow;
+  }
+  body{
+     font-family: sans-serif;
+  }
