add cascading file

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,3 +39,9 @@
   body{
      font-family: sans-serif;
   }
+  .cats p a{
+      background-color: coral;
+  }
+  .dogs p a{
+      background-color: steelblue;
+  }
